<resources>
    <string name="app_name">NumberGuesser</string>
    <string name="guess_hint">Guess the number</string>
    <string name="guess_button_text">Guess</string>
    <string name="settings_icon_description">Settings</string>
    <string name="guesses_left">Number of guesses left: 0</string>
    <string name="result">The guess number was:</string>
    <string name="restart">Restart</string>
    <string name="start_game">Start Game</string>
    <string name="maximum_guesses_allowed">Maximum Guesses Allowed</string>
    <string name="hints">Hints</string>
    <string name="range_start_number">Range Start Number</string>
    <string name="range_end_number">Range End Number</string>
</resources>