<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/guess_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guess_button_text" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/settings_icon_description"
        app:srcCompat="@drawable/settings"
        android:focusable="true" />

    <TextView
        android:id="@+id/remainingGuesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guesses_left" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:visibility="gone"/>

</LinearLayout>